--- a/src/main/resources/static/stylesheets/styles.css
+++ b/src/main/resources/static/stylesheets/styles.css
@@ -76,7 +76,7 @@ body {
 
 .ingreso-form-container,
 .card {
-  background-color: rgba(255, 255, 255, 0.2) !important;
+  background-color: #200533 !important;
 }
 
 th {
