--- a/src/main/resources/templates/estudiante/lecciones/vista_leccion.html
+++ b/src/main/resources/templates/estudiante/lecciones/vista_leccion.html
@@ -105,6 +105,11 @@
         </button>
       </div>
 
+      <!-- Para dirigirse a una prueba -->
+       <div class="mt-3 d-grid gap-2">
+        <a class="btn btn-primary btn-sm" th:href="@{'/prueba/' + ${leccion.id}}">Realizar Prueba</a>
+       </div>
+
       <script>
         document.addEventListener('DOMContentLoaded', function () {
           const carousel = document.getElementById('carouselExampleIndicators');
