--- a/src/main/resources/templates/ingreso.html
+++ b/src/main/resources/templates/ingreso.html
@@ -31,7 +31,15 @@
     <main class="container pt-4">
       <div class="row mt-5">
         <div class="col-md-6">
-          <div class="rounded ingreso-form-container py-5 px-3">
+          <div class="rounded ingreso-form-container py-3 px-3">
+            <div class="text-center mb-2">
+              <img
+                src="/images/logoArrupe.webp"
+                width="150"
+                height="150"
+                alt=""
+              />
+            </div>
             <div class="text-center mb-4">
               <h3 class="rowdies-regular text-light mb-2">Inicio de sesión</h3>
               <div class="small fst-italic text-light">
