--- a/src/main/resources/templates/estudiante/lecciones/vista_leccion.html
+++ b/src/main/resources/templates/estudiante/lecciones/vista_leccion.html
@@ -106,9 +106,35 @@
       </div>
 
       <!-- Para dirigirse a una prueba -->
-       <div class="mt-3 d-grid gap-2">
+       <h5 class="text-center mb-3 text-light">Prueba de Conocimientos</h5>
+
+       <div class="my-3 d-grid gap-2">
         <a class="btn btn-primary btn-sm" th:href="@{'/prueba/' + ${leccion.id}}">Realizar Prueba</a>
        </div>
+
+       <!-- Tabla con los resultados -->
+       <div class="mb-3">
+        <table class="table" id="resultsTable">
+          <thead>
+            <tr>
+              <th>Intento</th>
+              <th>Fecha de Realización</th>
+              <th>Puntuación</th>
+              <th>Detalles</th>
+            </tr>
+          </thead>
+          <tbody>
+            <!-- Aqui iran los resultados -->
+          </tbody>
+        </table>
+      </div>
+
+       <script th:inline="javascript">
+        /*<![CDATA[*/
+        var idPrueba_leccion = /*[[${idPrueba_leccion}]]*/ null;
+        var idUsuario = /*[[${ID}]]*/ null;
+        /*]]>*/
+      </script>
 
       <script>
         document.addEventListener('DOMContentLoaded', function () {
@@ -146,6 +172,27 @@
             button.addEventListener('click', () => {
               handleSlideChange(index);
             });
+          });
+
+          fetch('http://localhost:8085/arrupe/sv/arrupe/resultadosPrueba')
+          .then(response => response.json())
+          .then(data => {
+            const filteredResults = data.filter(result => result[1] == idPrueba_leccion && result[2] == idUsuario);
+            const tableBody = document.querySelector('#resultsTable tbody');
+
+            filteredResults.forEach((result, index) => {
+              const row = document.createElement('tr');
+              row.innerHTML = `
+                <td>${index + 1}</td>
+                <td>${result[5] ? new Date(result[5]).toLocaleString() : 'N/A'}</td>
+                <td>${result[4]}</td>
+                <td><a href='' class='btn btn-sm btn-primary'>Detalles</a></td>
+              `;
+              tableBody.appendChild(row);
+            });
+          })
+          .catch(error => {
+            console.error('Error fetching data:', error);
           });
         });
       </script>
