Ya se pueden agregar pruebas y vincularlas con lecciones
El admin puede agregar pruebas y vincularlas a una leccion

--- a/src/main/resources/templates/admin/admin_portal.html
+++ b/src/main/resources/templates/admin/admin_portal.html
@@ -85,7 +85,9 @@
           ¡Maneja los aspectos importantes de Arrupe Lee!
         </div>
       </div>
-      <div class="row tarjetas-admin-container pt-3">
+      <div
+        class="row tarjetas-admin-container pt-3 justify-content-center text-center"
+      >
         <div class="col-md-4 mb-4">
           <div class="card text-light">
             <div class="card-body">
@@ -98,6 +100,24 @@
                   class="btn btn-primary text-dark rounded-pill btn-sm"
                   href="/lecciones"
                   >Ir a Lecciones</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4">
+          <div class="card text-light">
+            <div class="card-body">
+              <h3 class="card-title text-center">Pruebas</h3>
+              <p class="card-text small text-center">
+                Maneja las pruebas que el estudiante podrá contestar en cada
+                lección.
+              </p>
+              <div class="d-grid gap-2">
+                <a
+                  class="btn btn-primary text-dark rounded-pill btn-sm"
+                  href="/pruebas-admin"
+                  >Ir a Pruebas</a
                 >
               </div>
             </div>
