Cambio de nombre a Planeta Arrupe
Se ha cambiado todo lo relacionado a Arrupe Lee a Planeta Arrupe

--- a/src/main/resources/templates/admin/admin_portal.html
+++ b/src/main/resources/templates/admin/admin_portal.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Arrupe Lee</title>
+    <title>Planeta Arrupe</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -39,7 +39,7 @@
       <nav class="navbar navbar-expand-lg bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="/portal-admin">
-            <img src="/images/logo.png" alt="Arrupe Lee" />
+            <img src="/images/logo.png" alt="Planeta Arrupe" />
           </a>
           <button
             class="navbar-toggler"
@@ -82,7 +82,7 @@
           <b th:text="${usuario}"></b>
         </div>
         <div class="small fst-italic">
-          ¡Maneja los aspectos importantes de Arrupe Lee!
+          ¡Maneja los aspectos importantes de Planeta Arrupe!
         </div>
       </div>
       <div
@@ -93,7 +93,7 @@
             <div class="card-body">
               <h3 class="card-title text-center">Lecciones</h3>
               <p class="card-text small text-center">
-                Maneja las lecciones que se podrán leer en Arrupe Lee.
+                Maneja las lecciones que se podrán leer en Planeta Arrupe.
               </p>
               <div class="d-grid gap-2">
                 <a
@@ -128,7 +128,8 @@
             <div class="card-body">
               <h3 class="card-title text-center">Usuarios</h3>
               <p class="card-text small text-center">
-                Maneja los diferentes usuarios que tendrán acceso a Arrupe Lee.
+                Maneja los diferentes usuarios que tendrán acceso a Planeta
+                Arrupe.
               </p>
               <div class="d-grid gap-2">
                 <a
@@ -145,7 +146,8 @@
             <div class="card-body">
               <h3 class="card-title text-center">Roles</h3>
               <p class="card-text small text-center">
-                Maneja los diferentes roles que se encontrarán en Arrupe Lee.
+                Maneja los diferentes roles que se encontrarán en Planeta
+                Arrupe.
               </p>
               <div class="d-grid gap-2">
                 <a
@@ -162,7 +164,7 @@
             <div class="card-body">
               <h3 class="card-title text-center">Grados</h3>
               <p class="card-text small text-center">
-                Maneja los grados que estarán disponibles en Arrupe Lee.
+                Maneja los grados que estarán disponibles en Planeta Arrupe.
               </p>
               <div class="d-grid gap-2">
                 <a
@@ -179,7 +181,7 @@
             <div class="card-body">
               <h3 class="card-title text-center">Secciones</h3>
               <p class="card-text small text-center">
-                Maneja las secciones que estarán disponibles en Arrupe Lee.
+                Maneja las secciones que estarán disponibles en Planeta Arrupe.
               </p>
               <div class="d-grid gap-2">
                 <a
