--- a/src/main/resources/templates/admin/grados/vista_grados.html
+++ b/src/main/resources/templates/admin/grados/vista_grados.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Arrupe Lee</title>
+    <title>Planeta Arrupe</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -30,7 +30,7 @@
       <nav class="navbar navbar-expand-lg bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="/portal-admin">
-            <img src="/images/logo.png" alt="Arrupe Lee" />
+            <img src="/images/logo.png" alt="Planeta Arrupe" />
           </a>
           <button
             class="navbar-toggler"
@@ -70,7 +70,7 @@
       <div class="text-center mb-3 text-light">
         <h3 class="fs-2 rowdies-regular mb-3">Grados</h3>
         <div class="fst-italic fs-6">
-          Maneja los grados que estarán disponibles en Arrupe Lee.
+          Maneja los grados que estarán disponibles en Planeta Arrupe.
         </div>
       </div>
       <div class="d-grid gap-2 mb-3 mx-5">
