--- a/src/main/resources/templates/admin/pruebas/vista_pruebas.html
+++ b/src/main/resources/templates/admin/pruebas/vista_pruebas.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Arrupe Lee</title>
+    <title>Planeta Arrupe</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -30,7 +30,7 @@
       <nav class="navbar navbar-expand-lg bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="/portal-admin">
-            <img src="/images/logo.png" alt="Arrupe Lee" />
+            <img src="/images/logo.png" alt="Planeta Arrupe" />
           </a>
           <button
             class="navbar-toggler"
@@ -70,18 +70,18 @@
       <div class="text-center mb-3 text-light">
         <h3 class="fs-2 rowdies-regular mb-3">Pruebas</h3>
         <div class="fst-italic fs-6">
-          Maneja las pruebas que aparecen en las lecciones de Arrupe Lee.
+          Maneja las pruebas que aparecen en las lecciones de Planeta Arrupe.
         </div>
       </div>
       <div
         class="row tarjetas-admin-container pt-3 justify-content-center text-center"
       >
-        <div class="col-md-4 mb-4">
+        <div class="col-md-6 mb-4">
           <div class="card text-light">
             <div class="card-body">
               <h3 class="card-title text-center">Agregar Prueba</h3>
               <p class="card-text small text-center">
-                Agrega Pruebas a Arrupe Lee.
+                Agrega Pruebas a Planeta Arrupe.
               </p>
               <div class="d-grid gap-2">
                 <a
@@ -93,14 +93,14 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 mb-4">
+        <div class="col-md-6 mb-4">
           <div class="card text-light">
             <div class="card-body">
               <h3 class="card-title text-center h4">
                 Vincular Prueba con Lección
               </h3>
               <p class="card-text small text-center">
-                Vincula una prueba ya existente a una lección de Arrupe Lee.
+                Vincula una prueba ya existente a una lección de Planeta Arrupe.
               </p>
               <div class="d-grid gap-2">
                 <a
