--- a/src/main/resources/templates/estudiante/certificados/certificado.html
+++ b/src/main/resources/templates/estudiante/certificados/certificado.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Arrupe Lee</title>
+    <title>Planeta Arrupe</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -37,7 +37,7 @@
             Certificado de Finalización
           </div>
           <div class="small mb-3">
-            Por este medio Arrupe Lee certifica que el estudiante:
+            Por este medio Planeta Arrupe certifica que el estudiante:
           </div>
           <div
             class="rowdies-regular mb-3"
