--- a/src/main/resources/templates/admin/grados/editar_grado.html
+++ b/src/main/resources/templates/admin/grados/editar_grado.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Arrupe Lee</title>
+    <title>Planeta Arrupe</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -30,7 +30,7 @@
       <nav class="navbar navbar-expand-lg bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="/portal-admin">
-            <img src="/images/logo.png" alt="Arrupe Lee" />
+            <img src="/images/logo.png" alt="Planeta Arrupe" />
           </a>
           <button
             class="navbar-toggler"
