--- a/src/main/resources/templates/admin/informes.html
+++ b/src/main/resources/templates/admin/informes.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Arrupe Lee</title>
+    <title>Planeta Arrupe</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link
       rel="stylesheet"
@@ -41,7 +41,7 @@
       <nav class="navbar navbar-expand-lg bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="/portal-admin">
-            <img src="/images/logo.png" alt="Arrupe Lee" />
+            <img src="/images/logo.png" alt="Planeta Arrupe" />
           </a>
           <button
             class="navbar-toggler"
@@ -82,7 +82,7 @@
         <div class="text-center mb-3 text-light">
           <h3 class="fs-2 rowdies-regular mb-3">Informes</h3>
           <div class="fst-italic fs-6">
-            Obten informes sobre los diferentes aspectos de Arrupe Lee.
+            Obten informes sobre los diferentes aspectos de Planeta Arrupe.
           </div>
         </div>
         <div class="row pt-2 mb-4 col-md-10 mx-auto">
