--- a/src/main/resources/templates/err/auth-error.html
+++ b/src/main/resources/templates/err/auth-error.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Arrupe Lee</title>
+    <title>Planeta Arrupe</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -23,7 +23,7 @@
       <nav class="navbar bg-dark">
         <div class="container">
           <a class="navbar-brand" href="/">
-            <img src="/images/logo.png" alt="Arrupe Lee" />
+            <img src="/images/logo.png" alt="Planeta Arrupe" />
           </a>
         </div>
       </nav>
