--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Arrupe Lee</title>
+    <title>Planeta Arrupe</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -30,14 +30,14 @@
       <nav class="navbar navbar-expand-lg bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img src="/images/logo.png" alt="Arrupe Lee" />
+            <img src="/images/logo.png" alt="Planeta Arrupe" />
           </a>
         </div>
       </nav>
     </header>
     <main class="container pt-4">
       <div class="row text-center text-light">
-        <h1 class="rowdies-regular mb-3" style="font-size: 140px !important">
+        <h1 class="rowdies-regular mb-3" style="font-size: 160px !important">
           404
         </h1>
         <h5 class="mb-3">
