--- a/src/main/resources/templates/admin/pruebas/vincular_prueba.html
+++ b/src/main/resources/templates/admin/pruebas/vincular_prueba.html
@@ -116,6 +116,13 @@
             ></option>
           </select>
         </div>
+        <div class="mb-3">
+          <label for="estado" class="form-label">Estado:</label>
+          <select name="estado" id="estado" class="form-control" required>
+            <option value="HABILITADO">HABILITADO</option>
+            <option value="DESHABILITADO">DESHABILITADO</option>
+          </select>
+        </div>
         <div class="mb-3 d-grid gap-2">
           <button class="btn btn-primary text-dark rounded-pill btn-sm">
             Vincular Prueba con Lección
