--- a/src/main/resources/templates/estudiante/lecciones/lecciones_critico.html
+++ b/src/main/resources/templates/estudiante/lecciones/lecciones_critico.html
@@ -89,7 +89,8 @@
                   <h5 class="card-title">
                     <a
                       class="text-decoration-none text-light py-3 mb-3"
-                      th:href="@{'/leccion/' + ${leccion.id}}"
+                      th:href="${stat.index == 0 || progresoLecciones[stat.index - 1] == 100} ? '/leccion/' + ${leccion.id} : null"
+                      th:classappend="${stat.index == 0 || progresoLecciones[stat.index - 1] == 100} ? '' : 'disabled-link'"
                       th:text="${leccion.nombre}"
                     ></a>
                   </h5>
