Arreglo del progreso de una leccion
Ahora el progreso de una leccion depende de si se ha completado el slider como que si se ha obtenido una nota mayor o igual a 9

--- a/src/main/resources/templates/estudiante/lecciones/lecciones_inferencial.html
+++ b/src/main/resources/templates/estudiante/lecciones/lecciones_inferencial.html
@@ -91,7 +91,7 @@
                   <h5 class="card-title">
                     <a
                       class="text-decoration-none text-light py-3 mb-3"
-                      th:href="${stat.index == 0 || progresoLecciones[stat.index - 1] == 100} ? '/leccion/' + ${leccion.id} : null"
+                      th:href="${stat.index == 0 || progresoLecciones[stat.index - 1] == 100} ? '/leccion/' + ${leccion.id} + '/' + ${#numbers.formatDecimal(progresoLecciones[stat.index], 0, 0)} : null"
                       th:classappend="${stat.index == 0 || progresoLecciones[stat.index - 1] == 100} ? '' : 'disabled-link'"
                       th:text="${leccion.nombre}"
                     ></a>
