--- a/src/main/resources/templates/estudiante/pruebas/vista_prueba.html
+++ b/src/main/resources/templates/estudiante/pruebas/vista_prueba.html
@@ -253,7 +253,10 @@
             requestOptions
           )
             .then((response) => response.text())
-            .then((result) => console.log("Se ha guardado exitosamente"))
+            .then(
+              (result) =>
+                (window.location.href = `/resultado-prueba/${idPrueba}`)
+            )
             .catch((error) => console.log("error", error));
         }
       });
